(executable
 (name main)
 (modules main)
 (libraries dmlenu dmlenu_extra cmdliner))

(executable
 (name i3_workspaces)
 (modules i3_workspaces)
 (libraries dmlenu dmlenu_extra))

(executable
 (name wmctrl_switch)
 (modules wmctrl_switch)
 (libraries dmlenu))

(executable
 (name myexec)
 (modules myexec)
 (libraries dmlenu))

(executable
 (name mpc2D)
 (modules mpc2D)
 (libraries dmlenu dmlenu_extra))

(executable
 (name with_subcommands)
 (modules with_subcommands)
 (libraries dmlenu dmlenu_extra))

(alias
 (name examples)
 (deps main.exe i3_workspaces.exe wmctrl_switch.exe mpc2D.exe with_subcommands.exe))
